--- a/SolarBLE/SolarBLE.Windows/css/default.css
+++ b/SolarBLE/SolarBLE.Windows/css/default.css
@@ -1,6 +1,8 @@
-﻿#contenthost {
+﻿
+#contenthost {
     height: 100%;
     width: 100%;
+
 }
 
 .fragment {
@@ -15,6 +17,7 @@
         -ms-grid-columns: 37px 83px 1fr;
         -ms-grid-rows: 1fr;
         display: -ms-grid;
+        font-family:Impact;
     }
 
         .fragment header[role=banner] .win-navigation-backbutton {
