--- a/SolarBLE/SolarBLE.Windows/css/default.css
+++ b/SolarBLE/SolarBLE.Windows/css/default.css
@@ -1,10 +1,18 @@
-﻿
+﻿body {
+    background-color:#000;
+    
+}
 #contenthost {
     height: 100%;
     width: 100%;
 
 }
-
+#Sun {
+    color:rgba(71, 93, 196, 0.6);
+        text-shadow:3px 3px rgb(0, 0, 0);
+        font-family:Impact;
+        font-style:italic;
+}
 .fragment {
     -ms-grid-columns: 1fr;
     -ms-grid-rows: 128px 1fr;
@@ -17,7 +25,7 @@
         -ms-grid-columns: 37px 83px 1fr;
         -ms-grid-rows: 1fr;
         display: -ms-grid;
-        font-family:Impact;
+        
     }
 
         .fragment header[role=banner] .win-navigation-backbutton {
