made a function that prevents users from double clicking on an image in section 4.

--- a/SolarBLE/SolarBLE.Windows/pages/hub/hub.css
+++ b/SolarBLE/SolarBLE.Windows/pages/hub/hub.css
@@ -124,12 +124,12 @@
     }
 
     .hubpage .hub .section3 .win-item {
-        height: 310px;
+        height: 335px;
         width: 310px;
     }
 
         .hubpage .hub .section3 .win-item img {
-            height: 270px;
+            height: 310px;
             width: 310px;
         }
 
@@ -180,4 +180,23 @@
 }
 .win-hub-section-header {
     color: transparent !important;
+}
+.slate {
+    background:black;
+    position:absolute;
+    top:100vh;
+    left:0;
+    width:100vw;
+    height:100vh;
+    z-index:99;
+}
+.slate_full {
+    transition:all 500ms;
+    background:black;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100vw;
+    height:100vh;
+    z-index:99;
 }
